--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="wrapper">
-      <h2 class="question">You love me Aurelia Tiara Widana?</h2>
+      <h2 class="question">You love me Rel?</h2>
 
       <img
         class="gif"
